# auto-install

./: .gitignore  Cargo.toml  conf.toml  log.yaml
.conf/: .bashrc  .tmux.conf  .tmux.conf.local  .zshrc  alacritty.yml
src/: app_conf.rs  common.rs  main.rs
src/handle/: alacritty.rs  common.rs  handle.rs  mod.rs  pkg_manager.rs  shell_env.rs  tmux.rs  zsh.rs
src/util/: async_file.rs  file.rs  macros.rs  mod.rs  path.rs  shell.rs
