[package]
name = "auto_install"
version = "0.1.0"
authors = ["qinxiaoguang01 <qinxiaoguang01@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = {version = "1.8.0", features = ["attributes", "unstable"]}
log = "0.4.8" # 打印日志
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.4"
lazy_static = "1.4.0"
rand = "0.7.3"
log4rs = "0.11.0"
failure = "0.1.6"
async-trait = "0.1.42"
regex = "1.4.2"